<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="18dp"
    android:layout_marginRight="18dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_Registrar"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:onClick="Registro_act"
        android:text="@string/registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_consultar"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="Consulta_act"
        android:text="@string/consultar"
        app:layout_constraintTop_toBottomOf="@+id/btn_Registrar"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btn_ConsultarListview"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="Consulta_act_listview"
        android:text="@string/consultar_listview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ConsultarSpiner" />

    <Button
        android:id="@+id/btn_ConsultarSpiner"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="Consulta_act_spinner"
        android:text="@string/consultar_spiner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_consultar" />

</androidx.constraintlayout.widget.ConstraintLayout>